Added type model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -29,5 +29,9 @@
   "vocabulary": {
     "dataSource": "db",
     "public": true
+  },
+  "type": {
+    "dataSource": "db",
+    "public": true
   }
 }
