Added collection model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -33,5 +33,9 @@
   "type": {
     "dataSource": "db",
     "public": true
+  },
+  "collection": {
+    "dataSource": "db",
+    "public": true
   }
 }
